[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Thomas Wolter <thwolter@gmail.com>"]
description = "A sample project with wasm-pack"
licence = "MIT/Apache-2.0"
repository = "https://github.com/thwolter/hello-wasm.git"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"